--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "start": "remotion studio",
-    "prebuild": "ts-node scripts",
-    "build": "./build.sh",
+    "studio": "remotion studio",
     "render": "remotion render",
+    "build": "ts-node scripts",
     "test": "ts-node test"
   },
   "dependencies": {
