--- a/package.json
+++ b/package.json
@@ -3,17 +3,27 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "workspaces": [
+    "proxy"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "start": "vite",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
+    "@spotify/web-api-ts-sdk": "^1.1.2",
+    "@swc-node/register": "^1.6.8",
+    "@swc/core": "^1.3.23",
+    "@types/cors": "^2.8.16",
+    "@types/express": "^4.17.21",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -24,7 +34,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "prettier": "^3.1.0",
+    "sass": "^1.69.5",
     "typescript": "^5.2.2",
+    "use-async-effect": "^2.2.7",
     "vite": "^5.0.0"
   }
 }
