--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,1 @@
-proxy/.env
-proxy/.env.development
-
-*.mp3
-
-proxy/.spotify_cache
-
-tracks
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-!/.gitignore
+.env*
