--- a/downloader/package.json
+++ b/downloader/package.json
@@ -24,6 +24,13 @@
   },
   "dependencies": {
     "@spotify/web-api-ts-sdk": "^1.1.2",
-    "@swc/cli": "^0.1.63"
+    "@swc/cli": "^0.1.63",
+    "ffmetadata": "^1.7.0",
+    "ffmpeg-static": "^5.2.0",
+    "mkdirp": "^3.0.1",
+    "node-fetch": "^3.3.2",
+    "node-youtube-music": "^0.10.3",
+    "yt-converter": "^1.3.4",
+    "ytdl-core": "^4.11.5"
   }
 }
