--- a/downloader/tsconfig.json
+++ b/downloader/tsconfig.json
@@ -113,6 +113,9 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true
     /* Skip type checking all .d.ts files. */
+    "types": [
+      "../env.d.ts"
+    ]
   },
   "buildOptions": {
     "paths": {
