--- a/downloader/tsconfig.json
+++ b/downloader/tsconfig.json
@@ -111,7 +111,7 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true
+    "skipLibCheck": true,
     /* Skip type checking all .d.ts files. */
     "types": [
       "../env.d.ts"
