--- a/downloader/package.json
+++ b/downloader/package.json
@@ -16,7 +16,7 @@
     "@types/cli-progress": "^3.11.5",
     "@types/node": "^20.10.4",
     "@types/xml": "^1.0.11",
-    "typescript": "latest"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "@spotify/web-api-ts-sdk": "^1.1.2",
@@ -26,10 +26,8 @@
     "ffmpeg-static": "^5.2.0",
     "mkdirp": "^3.0.1",
     "node-youtube-music": "^0.10.3",
-    "spottydl": "^0.2.6",
     "xml": "^1.0.1",
     "yaml": "^2.3.4",
-    "yt-converter": "^1.3.4",
-    "ytdl-core": "^4.11.5"
+    "youtubei.js": "^9.1.0"
   }
 }
