--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Shun Ueda <62182668+shunueda@users.noreply.github.com>",
   "license": "MIT",
   "devDependencies": {
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "prettier-plugin-organize-imports": "^3.2.4"
   }
 }
