--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "workspaces": [
-    "downloader",
-    "frontend",
-    "shared"
+    "apps/*"
   ],
   "scripts": {
     "build:plugin": "sh plugin/build.sh",
