--- a/apps/display/package.json
+++ b/apps/display/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "next": "14.1.4",
+    "shared": "*"
   },
   "devDependencies": {
     "typescript": "^5",
