--- a/apps/interceptor/package.json
+++ b/apps/interceptor/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@spotify/web-api-ts-sdk": "^1.1.2",
+    "ably": "^2.0.1",
     "bufferutil": "^4.0.8",
     "cli-progress": "^3.12.0",
     "dotenv": "^16.4.3",
@@ -28,6 +29,7 @@
     "ffmpeg-static": "^5.2.0",
     "mkdirp": "^3.0.1",
     "node-youtube-music": "^0.10.3",
+    "underscore": "^1.13.6",
     "ws": "^8.16.0",
     "xml": "^1.0.1",
     "yaml": "^2.3.4",
