--- a/apps/display/package.json
+++ b/apps/display/package.json
@@ -12,7 +12,7 @@
     "react": "^18",
     "react-dom": "^18",
     "next": "14.1.4",
-    "shared": "*"
+    "models": "*"
   },
   "devDependencies": {
     "typescript": "^5",
