--- a/apps/interceptor/package.json
+++ b/apps/interceptor/package.json
@@ -37,6 +37,7 @@
     "ws": "^8.16.0",
     "xml": "^1.0.1",
     "yaml": "^2.3.4",
-    "youtubei.js": "^9.1.0"
+    "youtubei.js": "^9.1.0",
+    "config": "*"
   }
 }
