--- a/config.example.yaml
+++ b/config.example.yaml
@@ -6,5 +6,5 @@ overrides:
   - spotify: spotify_track_id
     youtube: youtube_video_id
 interceptor_interval: 0
-interceptor_ws_port: 8010
+interceptor_tolerance: 100
 vdj_ws_port: 8000
