--- a/apps/config/package.json
+++ b/apps/config/package.json
@@ -7,5 +7,9 @@
   "private": true,
   "exports": {
     ".": "./src/index.ts"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "yaml": "^2.4.1"
   }
 }
