--- a/apps/linker/package.json
+++ b/apps/linker/package.json
@@ -8,34 +8,22 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "NODE_ENV=development yarn start",
+    "dev": "cross-env NODE_ENV=development yarn start",
     "start": "vite-node src/index.ts"
   },
   "devDependencies": {
-    "@swc-node/register": "^1.6.8",
-    "@swc/core": "^1.3.78",
     "@types/cli-progress": "^3.11.5",
     "@types/node": "^20.10.4",
-    "@types/ws": "^8.5.10",
-    "@types/xml": "^1.0.11",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "vite-node": "^1.4.0"
+    "@types/xml": "^1.0.11"
   },
   "dependencies": {
-    "@spotify/web-api-ts-sdk": "^1.1.2",
-    "ably": "^2.0.1",
-    "bufferutil": "^4.0.8",
     "cli-progress": "^3.12.0",
-    "dotenv": "^16.4.3",
     "ffmetadata": "^1.7.0",
     "ffmpeg-static": "^5.2.0",
     "mkdirp": "^3.0.1",
     "node-youtube-music": "^0.10.3",
     "shared": "*",
-    "ws": "^8.16.0",
     "xml": "^1.0.1",
-    "yaml": "^2.3.4",
     "youtubei.js": "^9.1.0",
     "config": "*"
   }
