--- a/apps/shared/tsconfig.json
+++ b/apps/shared/tsconfig.json
@@ -1,6 +1,3 @@
 {
-  "extends": "../../tsconfig.base.json",
-//  "compilerOptions": {
-//    "types": ["../../env.d.ts"]
-//  }
+  "extends": "../../tsconfig.base.json"
 }
