--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "devDependencies": {
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4"
+  },
+  "dependencies": {
+    "@spotify/web-api-ts-sdk": "^1.2.0",
+    "cross-env": "^7.0.3",
+    "typescript": "^5.4.3",
+    "vite-node": "^1.4.0"
   }
 }
