--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -7,5 +7,8 @@
   "private": true,
   "exports": {
     ".": "./src/index.ts"
+  },
+  "dependencies": {
+    "@spotify/web-api-ts-sdk": "^1.2.0"
   }
 }
