make lyric fetch serverside

--- a/apps/display/package.json
+++ b/apps/display/package.json
@@ -12,6 +12,7 @@
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "ably": "^2.0.1",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "classnames": "^2.5.1",
     "models": "*",
     "next": "14.1.4",
     "react": "^18",
