--- a/apps/display/package.json
+++ b/apps/display/package.json
@@ -15,6 +15,7 @@
     "classnames": "^2.5.1",
     "models": "*",
     "next": "14.1.4",
+    "nextjs-cors": "^2.2.0",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.72.0",
