--- a/apps/display/package.json
+++ b/apps/display/package.json
@@ -14,7 +14,8 @@
     "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.5.1",
     "models": "*",
-    "next": "14.1.4",
+    "next": "^14.1.4",
+    "next-auth": "^4.24.7",
     "nextjs-cors": "^2.2.0",
     "react": "^18",
     "react-dom": "^18",
