--- a/apps/models/tsconfig.json
+++ b/apps/models/tsconfig.json
@@ -1,6 +1,6 @@
 {
-  "extends": "../../tsconfig.base.json",
-//  "compilerOptions": {
-//    "types": ["../../env.d.ts"]
-//  }
+  "extends": "../../tsconfig.base.json"
+  //  "compilerOptions": {
+  //    "types": ["../../env.d.ts"]
+  //  }
 }
