--- a/apps/display/package.json
+++ b/apps/display/package.json
@@ -20,7 +20,9 @@
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.72.0",
-    "use-async-effect": "^2.2.7"
+    "sonner": "^1.4.41",
+    "use-async-effect": "^2.2.7",
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@types/body-scroll-lock": "^3.1.2",
