--- a/config.example.yaml
+++ b/config.example.yaml
@@ -8,3 +8,5 @@ overrides:
 interceptor_interval: 0
 interceptor_position_buffer: 100
 vdj_ws_port: 8000
+display_lines_before: 1
+display_lines_after: 1
