--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-.d.ts
+*.d.ts
+.spotify_access_token_cache
 
 ### Intellij template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -155,6 +156,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
+.env
 .env.keys
 
 # parcel-bundler cache (https://parceljs.org/)
