--- a/packages/bridge/package.json
+++ b/packages/bridge/package.json
@@ -1,19 +1,28 @@
 {
   "name": "bridge",
-  "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "tsx src/index.js"
+    "start": "NODE_ENV='production' tsx --env-file=../../.env src",
+    "dev": "tsx --env-file=../../.env src"
   },
   "devDependencies": {
     "@types/cli-progress": "^3.11.6",
+    "@types/fluent-ffmpeg": "^2.1.25",
     "@types/xml": "^1.0.11"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "cli-progress": "^3.12.0",
+    "config": "workspace:*",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "mkdirp": "^3.0.1",
+    "node-taglib-sharp": "^5.2.3",
     "node-youtube-music": "^0.10.3",
     "xml": "^1.0.1",
-    "youtubei.js": "^10.3.0"
+    "youtubei.js": "^10.3.0",
+    "zod": "^3.23.8"
   }
 }
