--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -7,6 +7,7 @@
     "find-process": "^1.4.7",
     "mkdirp": "^3.0.1",
     "project-448": "workspace:*",
-    "yaml": "^2.5.0"
+    "yaml": "^2.5.0",
+    "model": "workspace:*"
   }
 }
