--- a/packages/linker/package.json
+++ b/packages/linker/package.json
@@ -16,6 +16,7 @@
     "cli-progress": "^3.12.0",
     "common": "workspace:*",
     "xml": "^1.0.1",
-    "youtubei.js": "^10.3.0"
+    "youtubei.js": "^10.3.0",
+    "model": "workspace:*"
   }
 }
