--- a/packages/display/package.json
+++ b/packages/display/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "body-scroll-lock": "4.0.0-beta.0",
     "class-variance-authority": "^0.7.0",
@@ -19,9 +20,11 @@
     "project-448": "workspace:*",
     "react": "^18",
     "react-dom": "^18",
+    "sass": "^1.78.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "use-async-effect": "^2.2.7"
+    "use-async-effect": "^2.2.7",
+    "vaul": "^0.9.2"
   },
   "devDependencies": {
     "@types/body-scroll-lock": "^3.1.2",
