feat(display): add island

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -44,5 +44,21 @@
       "quoteStyle": "single",
       "attributePosition": "auto"
     }
+  },
+  "json": {
+    "linter": {
+      "enabled": true
+    },
+    "formatter": {
+      "enabled": true
+    }
+  },
+  "css": {
+    "formatter": {
+      "enabled": true
+    },
+    "linter": {
+      "enabled": true
+    }
   }
 }
