--- a/packages/display/package.json
+++ b/packages/display/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "ably": "^2.4.0",
     "body-scroll-lock": "4.0.0-beta.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.441.0",
+    "model": "workspace:*",
+    "nanoid": "^5.0.7",
     "next": "14.2.11",
     "project-448": "workspace:*",
     "react": "^18",
