--- a/packages/display/package.json
+++ b/packages/display/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "ably": "^2.4.0",
     "body-scroll-lock": "4.0.0-beta.0",
     "class-variance-authority": "^0.7.0",
