--- a/configs/production.yaml
+++ b/configs/production.yaml
@@ -3,6 +3,8 @@ playlistIds:
   - 4QjIwCR4GwoorGkMgm0wvo
   # Bar 448
   - 4EMCSbxebWPAmpX9W8iv1C
+  # Lemon
+  - 4HF5i6VbQ1eYy12Mk6YaMQ
 overrides:
   "": ""
 lyrics:
