--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "check": "biome check --write && sort-package-json",
     "precommit": "pnpm type-check & pnpm check",
     "commit": "git add --all && cz",
-    "start": "tsx --env-file=.env src/index.ts",
+    "start": "tsx --env-file=.env src",
     "type-check": "tsc"
   },
   "dependencies": {
@@ -16,11 +16,11 @@
     "tsx": "^4.19.2",
     "xml": "^1.0.1",
     "youtubei.js": "^13.0.0",
-    "zx": "^8.3.0"
+    "zx": "^8.3.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@types/node": "^22.10.10",
+    "@types/node": "^22.13.1",
     "@types/xml": "^1.0.11",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
