--- a/package.json
+++ b/package.json
@@ -20,12 +20,19 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.13.4",
     "@types/xml": "^1.0.11",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "sort-package-json": "^2.14.0",
     "typescript": "^5.7.3"
   },
-  "packageManager": "pnpm@9.15.4"
+  "packageManager": "pnpm@10.4.0",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "@ffmpeg-installer/darwin-arm64",
+      "esbuild"
+    ]
+  }
 }
