--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "strict": true,
     "target": "esnext"
   },
-  "exclude": ["node_modules"],
-  "include": ["**/*.ts"]
+  "include": ["**/*.ts", "env.d.ts"],
+  "exclude": ["node_modules"]
 }
