--- a/assets/config.json
+++ b/assets/config.json
@@ -1,6 +1,6 @@
 {
   "directory": {
-    "virtual_dj": "Library/Application Support/VirtualDJ"
+    "virtualdj": "Library/Application Support/VirtualDJ"
   },
   "playlists": [
     {
