--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@spotify/web-api-ts-sdk": "^1.2.0",
-    "tsx": "^4.19.2",
+    "mkdirp": "^3.0.1",
+    "tsx": "^4.19.3",
     "xml": "^1.0.1",
-    "youtubei.js": "^13.0.0",
-    "zx": "^8.3.2"
+    "youtubei.js": "^13.3.0",
+    "zx": "^8.5.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@types/node": "^22.13.4",
+    "@types/node": "^22.14.0",
     "@types/xml": "^1.0.11",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "sort-package-json": "^2.14.0",
-    "typescript": "^5.7.3"
+    "sort-package-json": "^3.0.0",
+    "typescript": "^5.8.3"
   },
   "packageManager": "pnpm@10.4.0",
   "pnpm": {
